Uploading the basic commands on HTML

--- a/HTML/main.html
+++ b/HTML/main.html
@@ -14,16 +14,54 @@
         <h1> Header 1 </h1>
         <h2> Header 2 </h2>
         <b> Bold      </b> <br>
+        <strong>
+            We can use strong as bold too
+        </strong><br>
         <i> Italic    </i> <br>
+        <em>
+            We can use em as italic too
+        </em>
         <p> Paragraph   </p>
         <hr>
 
+        <u>Under</u>
+        <strike>strike</strike>
         Some random text
 
+<!-- Lists -->
+<!-- Unordered list-->
+<ul>
+    <h2>Wish Buy List</h2>
+    <li>Nootbook</li>
+    <li>Router</li>
+    <li>Video Game</li>
 
+</ul>
          
+<!-- Ordered List -->
+    <h1>Perguntas</h1>
+    <ol>
+        <li> First</li>
+        <li> Second</li>
+        <li> Third</li>
+    </ol>
 
-    </body>
+
+<!-- Images -->
+    <img src="Images/ufpe.png" height="500" width="300"/>
+
+    <!-- External Links -->
+    <a href="https://www.linkedin.com/in/geraldo-braz-402361138/">
+    <br> 
+    LinkeIn   
+    </a>
+    
+    <!-- Internal Links -->
+    <a href="home.html">
+        HOME
+    </a>
+
+</body>
 
 </html>
 
