Finished the TechBlog web page

--- a/CSS_Intermediate/TechBlog/home.html
+++ b/CSS_Intermediate/TechBlog/home.html
@@ -1,7 +1,7 @@
 <!docttype html>
 <html>
     <head>
-        <title>TecBlog</title>
+        <title>TechBlog</title>
         <meta charset="utf-8"/>
         <!-- External Links -->
         <link rel="stylesheet" type="text/css" href="css/styles.css"/> 
@@ -15,8 +15,7 @@
         <div id="navigation">
             <div id="area"> 
                 <h1 id="logo">
-                     <span class="greenColor">Tec</span>
-                     <span class="blackColor">Blog</span> 
+                     <span class="greenColor">Tech</span><span class="blackColor">Blog</span> 
                 </h1>
                 <!-- Menu -->
                 <div id="menu">
@@ -27,8 +26,47 @@
                 </div>
             </div>
         </div>
+        <div>
+            <h1 id="title">Home</h1>
 
+        </div>
+        <!--  -->
+        <div id="mainArea">
+            <div id="newsBox">
+                <h2> Post Title </h2>
+                <span class="postDate"> Posted in 30/10/2018</span>
+                <img class="postImg" src="img/imagem1.png"/>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                </p>
+                <span class="postedBy">Posted by Geraldo Braz</span>
+            </div>
+        </div>
+
+        <div id="mainArea">
+                <div id="newsBox">
+                    <h2> Post Title </h2>
+                    <span class="postDate"> Posted in 30/10/2018</span>
+                    <img class="postImg" src="img/imagem1.png"/>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
+                    <span class="postedBy">Posted by Geraldo Braz</span>
+                </div>
+        </div>
        
+        <div id="mainArea">
+                <div id="newsBox">
+                    <h2> Post Title </h2>
+                    <span class="postDate"> Posted in 30/10/2018</span>
+                    <img class="postImg" src="img/imagem1.png"/>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
+                    <span class="postedBy">Posted by Geraldo Braz</span>
+                </div>
+        </div>
 
     </body>
 
